--- a/media-style.css
+++ b/media-style.css
@@ -1,4 +1,4 @@
-
+/* 
 @media (max-width: 768px) {
     :root {
        font-size: 14px;
@@ -10,4 +10,4 @@
        font-size: 12px;
     }
   }
- 
+  */
