--- a/style-header.css
+++ b/style-header.css
@@ -1,147 +1,157 @@
 html {
-    box-sizing: border-box;
-    font-size: 16px;
-}
-  
-  *, *:before, *:after {
-    box-sizing: inherit;
-}
-  
-body, h1, h2, h3, h4, h5, h6, p, ol, ul {
-    margin: 0;
-    padding: 0;
-    font-weight: normal;
-    /* background-color: #F5F5F5; */
+  box-sizing: border-box;
+  /* font-size: 16px; */
+  font-size: clamp(12px, 2vw, 16px);
 }
 
-  
-ol, ul {
-    list-style: none;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
-  
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+  /* background-color: #F5F5F5; */
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
 img {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 a:hover {
-   background: #a3d4eb; /* Цвет фона */
-   max-height: 25px;
-  }
+  background: #a3d4eb; /* Цвет фона */
+  max-height: 25px;
+}
 
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 1200px;
-    margin:auto;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  min-width: 280px;
+  margin: auto;
 }
 
 /* //////////////////////////    HEADER   ///////////////////////////// */
 
 header {
-    position: relative;
-    background-color:#1B1966;
-    /* min-height: 873px; */
-    /* width: 75rem; */
-    z-index: -2;
+  position: relative;
+  background-color: #1b1966;
+  /* min-height: 873px; */
+  /* width: 75rem; */
+  z-index: -2;
 }
 
+.header-title {
+  display: flex;
+  /* margin-left: 38.79%; */
+  /* margin-top: 6.4%; */
+  margin: 77.67px auto 0 auto;
+  max-height: 55px;
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.25rem;
+  line-height: 129.7%;
+  color: #ffffff;
+  width: 16.25rem;
+  height: 3.4375em;
+}
 
- .header-title {
-    display: flex;
-    /* margin-left: 38.79%; */
-    /* margin-top: 6.4%; */
-    margin: 77.67px auto 0 auto;
-    max-height: 55px;
-    font-family: 'Jost';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 1.25rem;
-    line-height: 129.7%;
-    color: #FFFFFF;
-    width: 16.25rem;
-    height: 3.4375em;
+.h1-title {
+  display: flex;
+  align-items: center;
+  padding-left: 8px;
+}
 
- }
+.header-text {
+  margin: 36.33px 8.795% 0 8.795%;
+  text-align: center;
+  color: #ffffff;
+  /* border: 2px solid rgb(13, 70, 21); */
+}
 
+.header-text-first {
+  padding: 0 0 20px 0;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.5625rem;
+}
 
- .h1-title {
-    display: flex;
-    align-items: center;
-    padding-left: 8px;
- }
+.header-text-second {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.25rem;
+  line-height: 145.38%;
+}
 
- .header-text {
-    margin: 36.33px 8.795% 0 8.795%;
-    text-align: center;
-    color: #FFFFFF;
-    /* border: 2px solid rgb(13, 70, 21); */
- }
-
-
- .header-text-first {
-    padding: 0 0 20px 0;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 1.5625rem;
- }
-
- .header-text-second {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 1.25rem;
-    line-height: 145.38%;
- }
-
- .big-image {
-   position: relative;
-   display: flex;
-   left: 0px;
-   right: 3.769%; 
-   bottom: 0;
- }
+.overall-image {
+  position: relative;
+  aspect-ratio: 2.26;
+  width: 100%;
+  margin: 34.57px 0 0 0;
+}
 
 .left-image {
-    position: absolute;
-    bottom: 0;
-    left: 3.88%;
+  position: absolute;
+  bottom: 0;
+  left:3.7%;
+  z-index: 1;
+  height: 83.52%;
 }
 
- .right-image {
-    margin: 38.9px 0 0 43.71%;
- }
+.right-image {
+  position: absolute;
+  right: 3.67%;
+  top:0;
+  height: 100%;
+}
 
+.CRM-right {
+  position: absolute;
+  right: -7.89%;
+  top: -24.05%;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 15.29575rem;
+  line-height: 129.7%;
+  transform: rotate(-90deg);
+  color: transparent;
+  -webkit-text-stroke: 2px #5e5ca4;
+  z-index: -1;
+}
 
-
- .CRM-right {
-   position: absolute;
-   right: -7.89%;
-   top: -24.05%;
-   font-family: 'Open Sans';
-   font-style: normal;
-   font-weight: 700;
-   font-size: 15.29575rem;
-   line-height: 129.7%;
-   transform: rotate(-90deg);
-   color: transparent;
-   -webkit-text-stroke: 2px #5E5CA4;
-   z-index:-1;
- }
-
-
- .CRM-left {
-   position: absolute;
-   top: 531.98px;
-   left: -149.55px;
-   font-family: 'Open Sans';
-   font-style: normal;
-   font-weight: 700;
-   font-size: 12.1875rem;
-   line-height: 129.7%;
-   color: transparent;
-   -webkit-text-stroke: 2px #5E5CA4;
-   transform: rotate(-90deg);
-   z-index: -1;
- }
+.CRM-left {
+  position: absolute;
+  top: 531.98px;
+  left: -149.55px;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12.1875rem;
+  line-height: 129.7%;
+  color: transparent;
+  -webkit-text-stroke: 2px #5e5ca4;
+  transform: rotate(-90deg);
+  z-index: -1;
+}
