--- a/style-main.css
+++ b/style-main.css
@@ -1,14 +1,17 @@
 main {
-    background-color: #FFFFFF;
-    min-width:100%;
-    
+   display: flex;
+   position: relative;
+   background-color: #FFFFFF;
+   min-width:100%;
+   padding-bottom: 83px;
+   /* aspect-ratio: 1.775; */
     /* z-index:-2; */
  }
  
- .main-div {
+ /* .main-div {
     display: flex;
     position: relative;
- }
+ } */
  
  .left-main-div {
     margin: 92px 0 0 4.9775%;
@@ -97,7 +100,7 @@ main {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 1.125rem;
     line-height: 22px;
     color: #646E79;
     margin: 11px 0 0 0;
@@ -143,7 +146,7 @@ main {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 1.125rem;
     line-height: 22px;
     color: #646E79;
     margin: 11px 0 0 0;
@@ -189,7 +192,7 @@ main {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 1.125rem;
     line-height: 22px;
     color: #646E79;
     margin: 11px 0 0 0;
@@ -226,12 +229,12 @@ main {
  
  
  
- /* .div-background-white-{
+ .div-background-white-{
     width:561px;
     height: 413px;
     background-color: rgb(46, 51, 51);
     border-radius: 20px
- } */
+ }
  
  .div-background-white-files {
     width: 472px;
