--- a/style-main.css
+++ b/style-main.css
@@ -3,8 +3,10 @@ main {
    position: relative;
    background-color: #FFFFFF;
    min-width:100%;
-   padding-bottom: 83px;
-   /* aspect-ratio: 1.775; */
+   min-height: 676px;
+   /* min-height: 114%; */
+   overflow-x: clip;
+   /* padding-bottom: 83px; */
     /* z-index:-2; */
  }
  
@@ -14,7 +16,7 @@ main {
  } */
  
  .left-main-div {
-    margin: 92px 0 0 4.9775%;
+    margin: 5.75rem 0 0 4.9775%;
     max-height: 501px;
  }
  
@@ -200,45 +202,52 @@ main {
  }
  
  
- 
+
  .right-main-div {
+   position: relative;
    margin: 0 0 0 3.25%;
    min-width: 51.75%;
-   min-height: 100 ;
+   min-height: 100%;
  }
  
- 
- 
  .right-main-div h1 {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 700;
-    margin: 106px 10.17% 0 0
+   font-family: 'Inter';
+   font-style: normal;
+   font-weight: 700;
+   margin: 6.6875rem 0 0 0; 
  }
  
  .div-background-black {
     position: absolute;
     right: 0;
     top: 0;
-    width: 28.75%;
+    width: 55.5%;
     height: 100%;
     background-color: #0D161A;
     border-bottom-left-radius: 30px;
     /* z-index: -1;   */
  }
  
- 
- 
- .div-background-white-{
-    width:561px;
-    height: 413px;
-    background-color: rgb(46, 51, 51);
-    border-radius: 20px
+ .div-background-white{
+   position: relative;
+   top: 27px;
+   left:0;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width:90%;
+   min-width: 300px;
+   height: 61.05%;
+   background-color: white;
+   border: 2px solid #E0E0E0;
+   border-radius: 20px;
+   z-index: 1;
  }
  
  .div-background-white-files {
-    width: 472px;
-    height: 296px;
+   position: absolute;
+   width: 84.13%;
+   height: 71.67%;
  }
  
  .figma-files {
@@ -305,8 +314,8 @@ main {
     display: flex;
     flex-direction: column;
     margin: 23px 15px 0 7px;
-    max-width: 450px;
-    height: 55px;
+    max-width: 95.34%;
+    height: 18.58%;
     background-color: #4353FF;
     border-radius: 10px;
  }
