--- a/style-header.css
+++ b/style-header.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
-  /* font-size: 16px; */
   font-size: clamp(12px, 2vw, 16px);
+  overflow-x: hidden;
 }
 
 *,
@@ -25,6 +25,7 @@ ul {
   font-weight: normal;
   /* background-color: #F5F5F5; */
 }
+
 
 ol,
 ul {
@@ -54,15 +55,11 @@ a:hover {
 header {
   position: relative;
   background-color: #1b1966;
-  /* min-height: 873px; */
-  /* width: 75rem; */
-  z-index: -2;
+  /* z-index: -2; */
 }
 
 .header-title {
   display: flex;
-  /* margin-left: 38.79%; */
-  /* margin-top: 6.4%; */
   margin: 77.67px auto 0 auto;
   max-height: 55px;
   font-family: "Jost";
@@ -129,11 +126,13 @@ header {
 .CRM-right {
   position: absolute;
   right: -7.89%;
-  top: -24.05%;
+  /* top: -24.05%; */
+  top: -209px;
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 700;
-  font-size: 15.29575rem;
+  /* font-size: 15.29575rem; */
+  font-size: 244.732px;
   line-height: 129.7%;
   transform: rotate(-90deg);
   color: transparent;
