--- a/style-header.css
+++ b/style-header.css
@@ -72,6 +72,7 @@ header {
   height: 3.4375em;
 }
 
+
 .h1-title {
   display: flex;
   align-items: center;
@@ -108,6 +109,10 @@ header {
   margin: 34.57px 0 0 0;
 }
 
+/* .overall-image-2 {
+  display: contents;
+} */
+
 .left-image {
   position: absolute;
   bottom: 0;
@@ -116,11 +121,19 @@ header {
   height: 83.52%;
 }
 
+.left-image-2 {
+  display: none;
+}
+
 .right-image {
   position: absolute;
   right: 3.67%;
   top:0;
   height: 100%;
+}
+
+.right-image-2 {
+  display: none;
 }
 
 .CRM-right {
