--- a/style-section+footer.css
+++ b/style-section+footer.css
@@ -166,7 +166,7 @@ section {
 }
 
 .opensans-text {
-   margin: 19.92px 0 0 0;
+   margin: 19.92px 0 40px 0;
    max-height: 24px;
    font-family: 'Lato';
    font-style: normal;
@@ -244,7 +244,7 @@ footer {
    align-items: center;
    min-width: 100%;
    background: #000000;
-   height: 70px;
+   min-height: 70px;
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
