--- a/style-header.css
+++ b/style-header.css
@@ -2,6 +2,7 @@ html {
   box-sizing: border-box;
   font-size: clamp(12px, 2vw, 16px);
   overflow-x: hidden;
+  min-width: 280px;
 }
 
 *,
@@ -46,7 +47,6 @@ a:hover {
   display: flex;
   flex-wrap: wrap;
   max-width: 1200px;
-  min-width: 280px;
   margin: auto;
 }
 
@@ -55,7 +55,7 @@ a:hover {
 header {
   position: relative;
   background-color: #1b1966;
-  /* z-index: -2; */
+  z-index: -2;
 }
 
 .header-title {
@@ -113,16 +113,16 @@ header {
   display: contents;
 } */
 
+.btn-switch {
+  display: contents;
+}
+
 .left-image {
   position: absolute;
   bottom: 0;
   left:3.7%;
   z-index: 1;
   height: 83.52%;
-}
-
-.left-image-2 {
-  display: none;
 }
 
 .right-image {
@@ -132,20 +132,17 @@ header {
   height: 100%;
 }
 
-.right-image-2 {
-  display: none;
-}
-
 .CRM-right {
   position: absolute;
-  right: -7.89%;
+  /* right: -7.89%; */
+  right: -93.2px;
   /* top: -24.05%; */
   top: -209px;
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 700;
-  /* font-size: 15.29575rem; */
-  font-size: 244.732px;
+  font-size: 15.29575rem;
+  /* font-size: 244.732px; */
   line-height: 129.7%;
   transform: rotate(-90deg);
   color: transparent;
@@ -155,12 +152,14 @@ header {
 
 .CRM-left {
   position: absolute;
-  top: 531.98px;
+  /* top: 531.98px; */
+  top: 61%;
   left: -149.55px;
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 700;
   font-size: 12.1875rem;
+  /* font-size: 195px; */
   line-height: 129.7%;
   color: transparent;
   -webkit-text-stroke: 2px #5e5ca4;
