--- a/media-style 410+px.css
+++ b/media-style 410+px.css
@@ -15,6 +15,15 @@
         overflow-x: clip;
     }
 
+    .right-main-div {
+        position: relative;
+        top:-5px;
+        margin: 0 0 60px 0;
+        width: 81.75%;
+        min-width: 350px;
+        min-height: 50%;
+     }
+
      .left-main-div-text p {
         font-family: 'Inter';
         font-style: normal;
@@ -26,14 +35,14 @@
 
 
      .div-background-white{
-        margin: 0 auto 0 auto;
+        margin: 0 auto 10px auto;
         position: relative;
         top: 10px;
         display: flex;
         justify-content: center;
         align-items: center;
-         max-width: 60%;
-        min-height: 100%;
+        max-width: 85%;
+        min-height: 95%;
         background-color: #FFFFFF;
         border: 2px solid #E0E0E0;
         border-radius: 20px;
