--- a/media-style 410+px.css
+++ b/media-style 410+px.css
@@ -1,4 +1,4 @@
-@media (max-width: 410px) {
+@media (max-width: 412px) {
     html {
         font-size: 14px;
      }
@@ -18,10 +18,8 @@
     .right-main-div {
         position: relative;
         top:-5px;
-        margin: 0 0 60px 0;
-        width: 81.75%;
-        min-width: 350px;
-        min-height: 50%;
+        margin: 0 0 20px 0;
+        width: 90%;
      }
 
      .left-main-div-text p {
@@ -37,12 +35,13 @@
      .div-background-white{
         margin: 0 auto 10px auto;
         position: relative;
-        top: 10px;
+        /* top: 10px; */
+        bottom: 0px;
         display: flex;
         justify-content: center;
         align-items: center;
-        max-width: 85%;
-        min-height: 95%;
+        max-width: 90vw;
+        min-height: 453px;
         background-color: #FFFFFF;
         border: 2px solid #E0E0E0;
         border-radius: 20px;
@@ -137,4 +136,24 @@
         text-align: center;
         color: #FFFFFF;
      }
+}
+
+
+@media (max-width: 303px) {
+   .div-background-white{
+      margin: 0 0 10px 1px;
+      position: relative;
+      /* top: 10px; */
+      bottom: 0px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      max-width: 90vw;
+      min-height: 453px;
+      background-color: #FFFFFF;
+      border: none;
+      border-radius: 20px;
+      margin-bottom: 1px;
+      overflow-x: clip;
+   }
 }
