--- a/style-section+footer.css
+++ b/style-section+footer.css
@@ -242,6 +242,7 @@ footer {
    display: flex;
    justify-content: center;
    align-items: center;
+   text-align: center;
    min-width: 100%;
    background: #000000;
    min-height: 70px;
