--- a/style-header.css
+++ b/style-header.css
@@ -43,6 +43,10 @@ a:hover {
   max-height: 25px;
 }
 
+button:hover {
+  background-color: #4FFFDF ;
+}
+
 .container {
   display: flex;
   flex-wrap: wrap;
