--- a/style-section+footer.css
+++ b/style-section+footer.css
@@ -51,7 +51,7 @@ section {
    height: 0.75rem;
    width: 0.75rem;
    padding-left: 0.63rem;
-   border: 3px solid #FFFFFF;
+   border-bottom: 3px solid #FFFFFF;
    background-color: #FFFFFF;
 }
 
@@ -102,7 +102,7 @@ section {
    height: 0.75rem;
    width: 0.75rem;
    padding-left: 0.63rem;
-   border: 3px solid #FFFFFF;
+   border-bottom: 3px solid #FFFFFF;
    background-color: #FFFFFF;
 }
 
