--- a/media-style 410+px.css
+++ b/media-style 410+px.css
@@ -141,7 +141,7 @@
 
 @media (max-width: 303px) {
    .div-background-white{
-      margin: 0 0 10px 1px;
+      margin: 0 0 10px ;
       position: relative;
       /* top: 10px; */
       bottom: 0px;
