--- a/media-style 768+px.css
+++ b/media-style 768+px.css
@@ -37,6 +37,32 @@
       header {
        z-index: 0;
       }
+      
+
+      .burger {
+         display: flex;
+      }
+
+      .open{
+         display: flex !important;
+       }
+
+      .nav {
+         display: flex;
+         width: 100%;
+         height: 100vh;
+         position: fixed;
+         top: 0; bottom: 0; left: 0; right: 0;
+         z-index:5;
+         overflow-y:auto;
+         padding: 50px 40px;
+         background-color: black;
+      }
+
+      .nav ul {
+         flex-direction: column;
+         row-gap: 30px;
+      }
 
      .overall-image {
          display: contents;
