--- a/media-style 768+px.css
+++ b/media-style 768+px.css
@@ -43,11 +43,9 @@
          display: flex;
       }
 
-      .open{
-         display: flex !important;
-       }
+      
 
-      .nav {
+      .nav .open {
          display: flex;
          width: 100%;
          height: 100vh;
