--- a/media-style 768+px.css
+++ b/media-style 768+px.css
@@ -45,11 +45,13 @@
 
       
 
-      .nav .open {
+      .nav.open {
          display: flex;
+         justify-content: start;
+         align-items: self-start;
          width: 100%;
          height: 100vh;
-         position: fixed;
+         /* position: fixed; */
          top: 0; bottom: 0; left: 0; right: 0;
          z-index:5;
          overflow-y:auto;
@@ -58,9 +60,44 @@
       }
 
       .nav ul {
+         display: none;
+      }
+
+      .nav.open ul {
+         display: flex;
+         justify-content: center;
          flex-direction: column;
          row-gap: 30px;
       }
+
+      .nav ul li {
+         font-family: "Jost";
+         font-style: normal;
+         font-weight: 400;
+         color: black;
+         list-style: none;
+         padding: 0 0 20px 0;
+         font-size: 1.2rem;
+       }
+
+       ul li:last-child {
+         color: #ffffff;
+         font-weight: 500;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         width:127px;
+         height: 56px;
+         border-radius: 6px;
+         background-color: #303030; ;
+         padding: 0;
+       }
+
+       .burger.active {
+         position: absolute;
+         right: 10px;
+       }
+
 
      .overall-image {
          display: contents;
