--- a/media-style 768+px.css
+++ b/media-style 768+px.css
@@ -36,14 +36,15 @@
 
       header {
        z-index: 0;
+       height: 110%;
       }
       
 
       .burger {
          display: flex;
+         margin:10px 20px 0 0;
       }
 
-      
 
       .nav.open {
          display: flex;
@@ -51,9 +52,9 @@
          align-items: self-start;
          width: 100%;
          height: 100vh;
-         /* position: fixed; */
+         position: fixed;
          top: 0; bottom: 0; left: 0; right: 0;
-         z-index:5;
+         z-index:50;
          overflow-y:auto;
          padding: 50px 40px;
          background-color: black;
@@ -165,6 +166,7 @@
          min-width:100%;
          min-height: 1000px;
          overflow-x: hidden;
+         z-index: -1;
       }
 
 
